[project]
name = "thoughtfulai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.1",
    "gradio>=5.47.2",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter-dash>=0.4.2",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "openai>=1.109.1"
]
